kubernetes/home-assistant/4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant-deployment
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          imagePullPolicy: Always
          image: gsdevme/home-assistant:latest
          ports:
            - containerPort: 8123
          resources:
            requests:
              ephemeral-storage: "2Gi"
            limits:
              memory: "256Mi"
              # half a CPU core
              cpu: "500m"
              ephemeral-storage: "4Gi"
---
apiVersion: v1
kind: Service
metadata:
  namespace: home-assistant
  name: svc-home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - port: 80
      targetPort: 8123
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: home-assistant
  name: home-assistant-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: home-assistant.home.gsdev.me
      http:
        paths:
          - backend:
              serviceName: svc-home-assistant
              servicePort: 80
  tls:
    - hosts:
        - home-assistant.home.gsdev.me
      secretName: home-assistant-home-gsdev-me-tls
